--- a/index.html
+++ b/index.html
@@ -9,135 +9,262 @@
 <body>
 
   <!-- Header / Hero Section -->
-  <header>
-    <div>
-      <!-- Ask Copilot to teach you about `.svg`. 🙂 You'll need to resize the logo with CSS. -->
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
+  <header class="hero">
+    <div class="hero__inner">
+      <!-- resize the SVG with .hero__logo in CSS -->
+      <img class="hero__logo" loading="lazy" src="img/intel-header-logo.svg" alt="Intel Logo" />
+
       <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
+      <h1 class="hero__title">Sustainability Through the Ages</h1>
 
       <!-- Subheading / Description -->
-      <p>
-        Explore Intel's journey through time, discovering how our commitment
-        to innovation has shaped a more sustainable future for technology 
-        and our planet.
-      </p>
+      <p class="hero__subtitle">Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future for technology and our planet.</p>
+
+      <div class="hero__chips">
+        <span class="chip">Intel</span>
+        <span class="chip">Sustainability</span>
+        <span class="chip">History</span>
+      </div>
     </div>
   </header>
 
   <!-- Timeline Cards Section -->
-  <section>
-
-    <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <!-- Add image -->
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
+  <main>
+    <!-- Simple navigation buttons for the timeline (keyboard friendly) -->
+    <div class="timeline__nav" aria-hidden="false">
+      <button id="prevBtn" aria-label="Scroll to previous">← Prev</button>
+      <button id="nextBtn" aria-label="Scroll to next">Next →</button>
     </div>
+    <section class="timeline" aria-label="Sustainability timeline">
 
-    <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <!-- Add image -->
-      <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
-    </div>
+      <!-- Card 1: 1968 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">1968</h3>
+          <h4 class="card__title">Intel Founded</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel1968.png" alt="Intel founders, 1968" />
+        </div>
+        <p class="card__summary">Robert Noyce and Gordon Moore rename the newly formed company NM Electronics to Intel Corporation, laying the foundation for decades of technological innovation.</p>
+        <div class="card__more"><ul><li>Founded in Mountain View, CA</li><li>Early focus on memory chips</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <!-- Add image -->
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
-    </div>
+      <!-- Card 2: 1971 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">1971</h3>
+          <h4 class="card__title">First Microprocessor</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel1971.png" alt="Intel 4004 microprocessor, 1971" />
+        </div>
+        <p class="card__summary">Intel debuts the 4004, the world's first commercial microprocessor, igniting the microprocessor revolution and propelling the future of computing devices.</p>
+        <div class="card__more"><ul><li>Launch of the 4004</li><li>Enabled smaller, cheaper computers</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <!-- Add image -->
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
-    </div>
+      <!-- Card 3: 1978 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">1978</h3>
+          <h4 class="card__title">8086 Processor</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel1978.png" alt="8086 processor, 1978" />
+        </div>
+        <p class="card__summary">Launch of the 8086 processor, establishing the x86 architecture that drives countless PCs and servers in the modern era.</p>
+        <div class="card__more"><ul><li>x86 architecture introduced</li><li>Widespread industry adoption</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <!-- Add image -->
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
-    </div>
+      <!-- Card 4: 1985 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">1985</h3>
+          <h4 class="card__title">386 Processor</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel1985.png" alt="386 processor, 1985" />
+        </div>
+        <p class="card__summary">Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance and multitasking for personal computers.</p>
+        <div class="card__more"><ul><li>32-bit processing</li><li>Improved multitasking</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <!-- Add image -->
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
-    </div>
+      <!-- Card 5: 2006 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">2006</h3>
+          <h4 class="card__title">Peak GHG Emissions</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel2006.png" alt="Manufacturing and emissions, 2006" />
+        </div>
+        <p class="card__summary">This year marks Intel's highest annual greenhouse gas emissions for operations. Over subsequent years, Intel invests heavily in chemical abatement, renewable energy, and energy-efficient manufacturing to reverse this trend.</p>
+        <div class="card__more"><ul><li>Peak emissions year</li><li>Start of significant remediation efforts</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <!-- Add image -->
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
-    </div>
+      <!-- Card 6: 2020 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">2020</h3>
+          <h4 class="card__title">RISE Strategy</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel2020.png" alt="RISE strategy, 2020" />
+        </div>
+        <p class="card__summary">Intel launches its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy and 2030 goals, aiming to drive industry-wide progress on climate action, water stewardship, and waste reduction.</p>
+        <div class="card__more"><ul><li>RISE strategy announced</li><li>2030 sustainability goals</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <!-- Add image -->
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
-    </div>
+      <!-- Card 7: 2022 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">2022</h3>
+          <h4 class="card__title">Net-Zero By 2040</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel2022.png" alt="Net-zero commitment, 2022" />
+        </div>
+        <p class="card__summary">Intel announces its commitment to achieve net-zero greenhouse gas emissions (Scope 1 and 2) across its global operations by 2040, building on years of environmental initiatives.</p>
+        <div class="card__more"><ul><li>Net-zero commitment</li><li>Operational decarbonization</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
 
-    <!-- Card 9: 2024 -->
-    <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <!-- Add image -->
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
-    </div>
-  </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+      <!-- Card 8: 2023 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">2023</h3>
+          <h4 class="card__title">Renewable Electricity</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel2023.png" alt="Renewable electricity, 2023" />
+        </div>
+        <p class="card__summary">The company achieves 99% renewable electricity usage worldwide, helping to drastically lower carbon emissions and driving progress toward Intel's long-term sustainability goals.</p>
+        <div class="card__more"><ul><li>99% renewable electricity</li><li>Major emissions reductions</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
+
+      <!-- Card 9: 2024 -->
+      <article class="card" tabindex="0">
+        <div class="card__top">
+          <h3 class="card__year">2024</h3>
+          <h4 class="card__title">Sustainability Summit</h4>
+        </div>
+        <div class="card__media">
+          <!-- Using existing image from img/ folder; replace with AI image later if desired -->
+          <img loading="lazy" src="img/intel2024.png" alt="Sustainability summit, 2024" />
+        </div>
+        <p class="card__summary">Intel hosts its first Sustainability Summit, uniting suppliers, government officials, and industry leaders to collaborate on next-generation sustainable semiconductor manufacturing.</p>
+        <div class="card__more"><ul><li>Global summit held</li><li>Cross-sector collaboration</li></ul></div>
+        <div class="card__hint">Hover or focus to learn more</div>
+      </article>
+
+    </section>
+  </main>
+
+  <!-- Small script: make nav buttons work and allow arrow-key navigation for cards -->
+  <script>
+  // Simple timeline navigation for beginners
+  (function () {
+    const timeline = document.querySelector('.timeline');
+    const btnPrev = document.querySelector('#prevBtn');
+    const btnNext = document.querySelector('#nextBtn');
+
+    function getCenteredCardIndex() {
+      const cards = Array.from(timeline.querySelectorAll('.card'));
+      const rect = timeline.getBoundingClientRect();
+      const centerX = rect.left + rect.width / 2;
+      let closestIndex = 0;
+      let closestDist = Infinity;
+      cards.forEach((c, i) => {
+        const cr = c.getBoundingClientRect();
+        const cCenter = cr.left + cr.width / 2;
+        const dist = Math.abs(cCenter - centerX);
+        if (dist < closestDist) { closestDist = dist; closestIndex = i; }
+      });
+      return { cards, index: closestIndex };
+    }
+
+    function scrollToIndex(idx) {
+      const { cards } = getCenteredCardIndex();
+      if (!cards[idx]) return;
+      cards[idx].focus();
+      cards[idx].scrollIntoView({ inline: 'center', behavior: 'smooth', block: 'nearest' });
+    }
+
+    btnPrev && btnPrev.addEventListener('click', () => {
+      const { index } = getCenteredCardIndex();
+      scrollToIndex(Math.max(0, index - 1));
+    });
+    btnNext && btnNext.addEventListener('click', () => {
+      const { cards, index } = getCenteredCardIndex();
+      scrollToIndex(Math.min(cards.length - 1, index + 1));
+    });
+
+    // Arrow keys: when a card is focused, left/right move between cards (now centered)
+    document.addEventListener('keydown', (e) => {
+      const active = document.activeElement;
+      if (active && active.classList && active.classList.contains('card')) {
+        if (e.key === 'ArrowRight') {
+          const { cards, index } = getCenteredCardIndex();
+          scrollToIndex(Math.min(cards.length - 1, index + 1));
+        } else if (e.key === 'ArrowLeft') {
+          const { cards, index } = getCenteredCardIndex();
+          scrollToIndex(Math.max(0, index - 1));
+        }
+      }
+    });
+
+    // Subtle pointer-based tilt for cards (respecting reduced-motion)
+    (function setupCardTilt() {
+      if (window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches) return; // noop for motion-sensitive users
+      const cards = Array.from(document.querySelectorAll('.card'));
+      cards.forEach((card) => {
+        card.style.setProperty('--rx', '0deg');
+        card.style.setProperty('--ry', '0deg');
+        card.style.setProperty('--s', '1');
+        let rafId = null;
+
+        card.addEventListener('pointermove', (e) => {
+          const rect = card.getBoundingClientRect();
+          const px = (e.clientX - rect.left) / rect.width; // 0..1
+          const py = (e.clientY - rect.top) / rect.height; // 0..1
+          const ry = (px - 0.5) * -8; // rotateY between -4deg and 4deg
+          const rx = (py - 0.5) * 8;  // rotateX between -4deg and 4deg
+
+          if (rafId) cancelAnimationFrame(rafId);
+          rafId = requestAnimationFrame(() => {
+            card.style.setProperty('--rx', rx.toFixed(2) + 'deg');
+            card.style.setProperty('--ry', ry.toFixed(2) + 'deg');
+          });
+        });
+
+        card.addEventListener('pointerleave', () => {
+          if (rafId) cancelAnimationFrame(rafId);
+          card.style.setProperty('--rx', '0deg');
+          card.style.setProperty('--ry', '0deg');
+        });
+
+        card.addEventListener('pointerdown', () => card.style.setProperty('--s', '0.995'));
+        card.addEventListener('pointerup', () => card.style.setProperty('--s', '1.02'));
+      });
+    })();
+  })();
+  </script>
+
+  <p class="footer-note">Scroll to view timeline | Hover over cards to learn more!</p>
 </body>
 </html>
